--- a/debian/changelog
+++ b/debian/changelog
@@ -18,5 +18,6 @@ sidux-edu (0.1.0) UNRELEASED; urgency=low
   * please don't ship ./src/apps/*.desktop, that stuff is unmaintainable -
     what about shipping links and using readlink() at runtime to determine if
     the packages are installed?
+  * remove empty debian/links.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 22 Nov 2007 23:58:25 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 23 Nov 2007 00:00:57 +0100
