--- a/debian/changelog
+++ b/debian/changelog
@@ -24,5 +24,6 @@ sidux-edu (0.1.0) UNRELEASED; urgency=low
   * amarok, childsplay & tuxmath desktop files fixed
   * "All/Just installed programs" combobox inserted
   * Additional Packages marker added
+  * gnuplot, hebcal & kstar desktop files fixed 
 
- -- Fabian Wuertz <xadras@sidux.com>  Fri, 23 Nov 2007 19:34:07 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Fri, 23 Nov 2007 19:44:00 +0100
