--- a/debian/changelog
+++ b/debian/changelog
@@ -38,5 +38,7 @@ sidux-edu (0.1.0) UNRELEASED; urgency=low
   [ Fabian Wuertz ]
   * "Back to startpage" added
   * .desktop: "seminarix Programmstater" -> "Programmstarter"
+  * mv siduxEduAppinstaller sh/appinstaller
+  * BROKEN: appinstaller isn't executable
 
- -- Fabian Wuertz <xadras@sidux.com>  Tue, 27 Nov 2007 21:13:19 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Tue, 27 Nov 2007 21:14:06 +0100
