--- a/debian/changelog
+++ b/debian/changelog
@@ -42,7 +42,10 @@ sidux-edu (0.1.0) UNRELEASED; urgency=low
   * BROKEN: appinstaller isn't executable
   * appinstaller problem fixed
   * addtional package message changed
-  * ocatve and rkward added 
+  * ocatve and rkward added
   * typos in the apps descriptions fixed
 
- -- Fabian Wuertz <xadras@sidux.com>  Wed, 28 Nov 2007 17:12:54 +0100
+  [ Horst Tritremmel ]
+  * made appinstaller executable, installation part works now
+
+ -- Horst Tritremmel <hjt@sidux.com>  Thu, 29 Nov 2007 12:40:44 +0100
