--- a/debian/changelog
+++ b/debian/changelog
@@ -49,5 +49,6 @@ sidux-edu (0.1.0) UNRELEASED; urgency=low
   * made appinstaller executable, installation part works now
   * appinstaller to svn
   * remove appinstaller file
+  * add appisntaller, hopefulle executable now
 
- -- Horst Tritremmel <hjt@sidux.com>  Thu, 29 Nov 2007 13:06:12 +0100
+ -- Horst Tritremmel <hjt@sidux.com>  Thu, 29 Nov 2007 13:07:44 +0100
