--- a/debian/changelog
+++ b/debian/changelog
@@ -45,5 +45,6 @@ sidux-edu (0.1.0) UNRELEASED; urgency=low
   * build with -Wl,--as-needed to shut up dpkg-shlibdeps.
   * simplify appinstaller and make it pure POSIX.
   * fix copyright status.
+  * fix FSF address.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 29 Nov 2007 14:25:48 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 29 Nov 2007 14:32:17 +0100
