--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+sidux-edu (0.1.2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+  * add myself to Uploaders.
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 29 Nov 2007 14:45:53 +0100
+
 sidux-edu (0.1.1) unstable; urgency=low
 
   * fix bashisms.
