--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 sidux-edu (0.1.2) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
   * add myself to Uploaders.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 29 Nov 2007 14:45:53 +0100
+  [ Fabian Wuertz ]
+  * Musik --> Multimedia 1/2
+
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 29 Nov 2007 14:53:35 +0100
 
 sidux-edu (0.1.1) unstable; urgency=low
 
