--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ sidux-edu (0.1.2) UNRELEASED; urgency=low
 
   [ Fabian Wuertz ]
   * Musik --> Multimedia 1/2
+  * Musik --> Multimedia 2/2 
 
- -- Fabian Wuertz <xadras@sidux.com>  Thu, 29 Nov 2007 14:53:35 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 29 Nov 2007 14:56:40 +0100
 
 sidux-edu (0.1.1) unstable; urgency=low
 
