--- a/debian/changelog
+++ b/debian/changelog
@@ -7,9 +7,10 @@ sidux-edu (0.1.2) UNRELEASED; urgency=low
   [ Fabian Wuertz ]
   * Musik --> Multimedia 1/2
   * Musik --> Multimedia 2/2
-  * kaffeine added 
+  * kaffeine added
+  * isSemanrix function fixed 
 
- -- Fabian Wuertz <xadras@sidux.com>  Thu, 29 Nov 2007 15:02:19 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 29 Nov 2007 15:16:40 +0100
 
 sidux-edu (0.1.1) unstable; urgency=low
 
