--- a/debian/changelog
+++ b/debian/changelog
@@ -8,9 +8,10 @@ sidux-edu (0.1.2) UNRELEASED; urgency=low
   * Musik --> Multimedia 1/2
   * Musik --> Multimedia 2/2
   * kaffeine added
-  * isSemanrix function fixed 
+  * isSemanrix function fixed
+  * Musik --> Multimedia 3/2 
 
- -- Fabian Wuertz <xadras@sidux.com>  Thu, 29 Nov 2007 15:16:40 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 29 Nov 2007 15:20:01 +0100
 
 sidux-edu (0.1.1) unstable; urgency=low
 
