--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.1.3) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 29 Nov 2007 15:27:36 +0100
+
 sidux-edu (0.1.2) unstable; urgency=low
 
   [ Stefan Lippers-Hollmann ]
