--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.1.3) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 29 Nov 2007 15:27:36 +0100
+  [ Fabian Wuertz ]
+  * kpdf problem fixed 
+
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 29 Nov 2007 15:45:53 +0100
 
 sidux-edu (0.1.2) unstable; urgency=low
 
