--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.1.3) UNRELEASED; urgency=low
+sidux-edu (0.1.3) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Fabian Wuertz ]
   * kpdf problem fixed 
 
  -- Fabian Wuertz <xadras@sidux.com>  Thu, 29 Nov 2007 15:45:53 +0100
