--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.1.4) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 29 Nov 2007 16:29:01 +0100
+  [ Ferdinand Thommes ]
+  * upload changed src dir
+
+ -- Ferdinand Thommes <devil@sidux.com>  Sat, 01 Dec 2007 15:48:53 +0100
 
 sidux-edu (0.1.3) unstable; urgency=low
 
