sidux-edu (0.1.4) unstable; urgency=low
  * typo fixed
  * about corrected

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 02 Dec 2007 15:10:24 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,5 @@
-sidux-edu (0.1.4) UNRELEASED; urgency=low
+sidux-edu (0.1.4) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Ferdinand Thommes ]
-  * upload changed src dir
-
-  [ Fabian Wuertz ]
   * typo fixed
   * about corrected
 
