* update to Standards-Version 3.7.3, no changes necessary. * add entry for the debian menu system.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-sidux-edu (0.1.5) UNRELEASED; urgency=low
+sidux-edu (0.1.5) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * update to Standards-Version 3.7.3, no changes necessary.
+  * add entry for the debian menu system.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 02 Dec 2007 21:41:56 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 14:48:45 +0100
 
 sidux-edu (0.1.4) unstable; urgency=low
 
