--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.1.6) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 14:52:23 +0100
+
 sidux-edu (0.1.5) unstable; urgency=low
 
   * update to Standards-Version 3.7.3, no changes necessary.
