--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 sidux-edu (0.1.6) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 14:52:23 +0100
+  [ Fabian Wuertz ]
+  * icon changed
+  * about modified
+
+ -- Fabian Wuertz <xadras@sidux.com>  Mon, 03 Dec 2007 19:56:39 +0100
 
 sidux-edu (0.1.5) unstable; urgency=low
 
