sidux-edu (0.1.6) unstable; urgency=low
  * icon changed
  * about modified

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 03 Dec 2007 19:56:39 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.1.6) UNRELEASED; urgency=low
+sidux-edu (0.1.6) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Fabian Wuertz ]
   * icon changed
   * about modified
 
