--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.1.7) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 04 Dec 2007 15:04:36 +0100
+  [ Horst Tritremmel ]
+  * added juk music player to Multimedia
+
+ -- Horst Tritremmel <hjt@sidux.com>  Tue, 04 Dec 2007 16:10:00 +0100
 
 sidux-edu (0.1.6) unstable; urgency=low
 
