--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.1.7) UNRELEASED; urgency=low
+sidux-edu (0.1.7) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Horst Tritremmel ]
   * added juk music player to Multimedia
 
  -- Horst Tritremmel <hjt@sidux.com>  Tue, 04 Dec 2007 16:10:00 +0100
