--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.1.8) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 04 Dec 2007 16:43:01 +0100
+
 sidux-edu (0.1.7) unstable; urgency=low
 
   * added juk music player to Multimedia
