--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.1.9) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 05 Dec 2007 14:50:38 +0100
+
 sidux-edu (0.1.8) unstable; urgency=low
 
   * about modified 
