--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.1.10) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 05 Dec 2007 23:52:42 +0100
+
 sidux-edu (0.1.9) unstable; urgency=low
 
   * new image for apps without image set
