sidux-edu (0.1.10) unstable; urgency=low
  * Multimedia -> Musik
  * Kino and Scribus: homepage added
  * ksnapshot: description added

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 06 Dec 2007 00:15:44 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.1.10) UNRELEASED; urgency=low
+sidux-edu (0.1.10) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Fabian Wuertz ]
   * Multimedia -> Musik
   * Kino and Scribus: homepage added
   * ksnapshot: description added
