--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.1.11) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 07 Dec 2007 02:25:46 +0100
+  [ Ferdinand Thommes ]
+  * added homepage fo wxmaxima
+
+ -- Ferdinand Thommes <devil@sidux.com>  Fri, 07 Dec 2007 14:20:52 +0100
 
 sidux-edu (0.1.10) unstable; urgency=low
 
