sidux-edu (0.1.11) unstable; urgency=low
  * added homepage fo wxmaxima
  * added homepage to kstars.pmap

 -- Ferdinand Thommes <devil@sidux.com>  Fri, 07 Dec 2007 14:24:33 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.1.11) UNRELEASED; urgency=low
+sidux-edu (0.1.11) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Ferdinand Thommes ]
   * added homepage fo wxmaxima
   * added homepage to kstars.pmap
 
