--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ sidux-edu (0.1.12) UNRELEASED; urgency=low
 
   [ Ferdinand Thommes ]
   * added homepages for kwordquiz.pmap kvoctrain.pmap
+  * updated kstars.pmap kwordquiz.pmap kvoctrain.pmap
 
- -- Ferdinand Thommes <devil@sidux.com>  Fri, 07 Dec 2007 18:48:42 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Fri, 07 Dec 2007 23:09:33 +0100
 
 sidux-edu (0.1.11) unstable; urgency=low
 
