sidux-edu (0.1.12) unstable; urgency=low
  [ Ferdinand Thommes ]
  * added homepages for kwordquiz.pmap kvoctrain.pmap
  * updated kstars.pmap kwordquiz.pmap kvoctrain.pmap

  [ Fabian Wuertz ]
  * hanzim homepage added
  * tuxetype exec fixed
  * pixmap icons (/usr/share/pixmaps) detection added (sunclock icon problem
    fixed)

 -- Fabian Wuertz <xadras@sidux.com>  Sat, 08 Dec 2007 02:47:31 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,4 @@
-sidux-edu (0.1.12) UNRELEASED; urgency=low
-
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
+sidux-edu (0.1.12) unstable; urgency=low
 
   [ Ferdinand Thommes ]
   * added homepages for kwordquiz.pmap kvoctrain.pmap
