--- a/debian/changelog
+++ b/debian/changelog
@@ -15,8 +15,9 @@ sidux-edu (0.1.12) unstable; urgency=low
   * tuxetype exec fixed
   * pixmap icons (/usr/share/pixmaps) detection added (sunclock icon problem
     fixed)
+  * OpenOffice added 
 
- -- Fabian Wuertz <xadras@sidux.com>  Sat, 08 Dec 2007 02:47:31 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Sat, 08 Dec 2007 03:23:12 +0100
 
 sidux-edu (0.1.11) unstable; urgency=low
 
