sidux-edu (0.1.13) unstable; urgency=low
  * added extra oo.pmaps
  * added openclipart.pmap hunspell-de-de.pmap

 -- Ferdinand Thommes <devil@sidux.com>  Sat, 08 Dec 2007 14:11:53 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.1.13) UNRELEASED; urgency=low
+sidux-edu (0.1.13) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Ferdinand Thommes ]
   * added extra oo.pmaps
   * added openclipart.pmap hunspell-de-de.pmap
 
