* category descriptions added

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.1.14) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 08 Dec 2007 14:32:32 +0100
+  [ Fabian Wuertz ]
+  * category descriptions added
+
+ -- Fabian Wuertz <xadras@sidux.com>  Sat, 08 Dec 2007 15:16:18 +0100
 
 sidux-edu (0.1.13) unstable; urgency=low
 
