--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,6 @@
-sidux-edu (0.1.14) UNRELEASED; urgency=low
+sidux-edu (0.1.14) unstable; urgency=low
 
   [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
   * enforce cli-only.
 
   [ Fabian Wuertz ]
