--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.1.17) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 19 Dec 2007 12:23:33 +0100
+
 sidux-edu (0.1.16) unstable; urgency=low
 
   * Translation thanks to RoEn
