--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.1.17) UNRELEASED; urgency=low
+sidux-edu (0.1.17) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Fabian Wuertz ]
   * typo in xsane.pmap fixed
 
  -- Fabian Wuertz <xadras@sidux.com>  Fri, 21 Dec 2007 00:03:02 +0100
