* logo updated * kplato updated

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,9 +4,10 @@ sidux-edu (0.1.18) UNRELEASED; urgency=low
   * NOT RELEASED YET
 
   [ Fabian Wuertz ]
-  * logo updated 
+  * logo updated
+  * kplato updated
 
- -- Fabian Wuertz <xadras@sidux.com>  Sun, 23 Dec 2007 15:58:19 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Sun, 23 Dec 2007 20:43:15 +0100
 
 sidux-edu (0.1.17) unstable; urgency=low
 
