sidux-edu (0.1.18) unstable; urgency=low
  * logo updated
  * kplato updated
  * seminarix manual link fixed

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 23 Dec 2007 21:05:54 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.1.18) UNRELEASED; urgency=low
+sidux-edu (0.1.18) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Fabian Wuertz ]
   * logo updated
   * kplato updated
   * seminarix manual link fixed 
