--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.1.19) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 24 Dec 2007 15:05:54 +0100
+
 sidux-edu (0.1.18) unstable; urgency=low
 
   * logo updated
