--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.1.20) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 01 Jan 2008 13:57:18 +0100
+
 sidux-edu (0.1.19) unstable; urgency=low
 
   * fixed links in sidux-edu
