--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ sidux-edu (0.1.20) UNRELEASED; urgency=low
 
   [ Ferdinand Thommes ]
   * added new pmaps for kiten kturtle lazarus
+  * changed main.cpp
 
- -- Ferdinand Thommes <devil@sidux.com>  Wed, 02 Jan 2008 11:20:13 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Wed, 02 Jan 2008 21:26:43 +0100
 
 sidux-edu (0.1.19) unstable; urgency=low
 
