sidux-edu (0.1.20) unstable; urgency=low
  * added new pmaps for kiten kturtle lazarus
  * changed main.cpp

 -- Ferdinand Thommes <devil@sidux.com>  Wed, 02 Jan 2008 21:26:43 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.1.20) UNRELEASED; urgency=low
+sidux-edu (0.1.20) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Ferdinand Thommes ]
   * added new pmaps for kiten kturtle lazarus
   * changed main.cpp
 
