--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.1.21) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 03 Jan 2008 03:54:44 +0100
+
 sidux-edu (0.1.20) unstable; urgency=low
 
   * added new pmaps for kiten kturtle lazarus
