--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.1.21) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 03 Jan 2008 03:54:44 +0100
+  [ Ferdinand Thommes ]
+  * fixed typos in krita.pmap and krusader.pmap
+
+ -- Ferdinand Thommes <devil@sidux.com>  Thu, 03 Jan 2008 13:57:04 +0100
 
 sidux-edu (0.1.20) unstable; urgency=low
 
