--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-sidux-edu (0.1.21) UNRELEASED; urgency=low
+sidux-edu (0.1.21) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Ferdinand Thommes ]
   * fixed typos in krita.pmap and krusader.pmap
 
  -- Ferdinand Thommes <devil@sidux.com>  Thu, 03 Jan 2008 13:57:04 +0100
