--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.1.22) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 05 Jan 2008 01:51:38 +0100
+
 sidux-edu (0.1.21) unstable; urgency=low
 
   * fixed typos in krita.pmap and krusader.pmap
