--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.2.1) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 08 Jan 2008 22:46:03 +0100
+
 sidux-edu (0.2.0) unstable; urgency=low
 
   * switch from custom su-me to generic su-to-root, adapt dependencies and
