--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.2.1) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 08 Jan 2008 22:46:03 +0100
+  [ devil ]
+  * added pmap for noteedidt and keducabuilder
+
+ -- devil <devil@devils64box>  Mon, 14 Jan 2008 11:12:16 +0100
 
 sidux-edu (0.2.0) unstable; urgency=low
 
