--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,8 @@
-sidux-edu (0.2.1) UNRELEASED; urgency=low
+sidux-edu (0.2.1) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ devil ]
   * added pmap for noteedidt and keducabuilder
 
- -- devil <devil@devils64box>  Mon, 14 Jan 2008 11:12:16 +0100
+ -- Ferdinand Thommes <devil@sidux.com>  Mon, 14 Jan 2008 11:12:16 +0100
 
 sidux-edu (0.2.0) unstable; urgency=low
 
