--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-edu (0.2.2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 14 Jan 2008 13:28:47 +0100
+
 sidux-edu (0.2.1) unstable; urgency=low
 
   * added pmap for noteedidt and keducabuilder
