--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 sidux-edu (0.2.2) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 14 Jan 2008 13:28:47 +0100
+  [ Fabian Wuertz ]
+  * possibility for more then one package per app added
+
+ -- Fabian Wuertz <xadras@sidux.com>  Wed, 16 Jan 2008 23:53:19 +0100
 
 sidux-edu (0.2.1) unstable; urgency=low
 
