--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ sidux-edu (0.2.2) UNRELEASED; urgency=low
 
   [ Fabian Wuertz ]
   * possibility for more then one package per app added
+  * yet another little bug fixed
 
- -- Fabian Wuertz <xadras@sidux.com>  Wed, 16 Jan 2008 23:53:19 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 17 Jan 2008 00:27:23 +0100
 
 sidux-edu (0.2.1) unstable; urgency=low
 
